--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-type-animation": "^3.1.0",
     "sharp": "^0.32.5",
     "swiper": "^10.2.0",
